adding third & second blog

--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi omnis qui, quis consequatur eaque, libero sunt quasi voluptatum culpa id mollitia dignissimos dolores quae repellendus voluptatibus dolorum labore blanditiis quam.</p>
     </div>
+    <div>
+        <h3>My Second Website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi omnis qui, quis consequatur eaque, libero sunt quasi voluptatum culpa id mollitia dignissimos dolores quae repellendus voluptatibus dolorum labore blanditiis quam.</p>
+    </div>
+    <div>
+        <h3>My Third Website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi omnis qui, quis consequatur eaque, libero sunt quasi voluptatum culpa id mollitia dignissimos dolores quae repellendus voluptatibus dolorum labore blanditiis quam.</p>
+    </div>
 </body>
 </html>
