--- a/index.html
+++ b/index.html
@@ -20,5 +20,14 @@
         <h3>My Third Website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi omnis qui, quis consequatur eaque, libero sunt quasi voluptatum culpa id mollitia dignissimos dolores quae repellendus voluptatibus dolorum labore blanditiis quam.</p>
     </div>
+
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
