--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>
+            Nature Beauty
+        </h3>
+        <img src="images/forest_trees_early_autumn-wallpaper-2048x1152.jpg" alt="">
+    </div>
 </body>
 </html>
